Fixed the centering align for the placeholder sign-up/login links

--- a/public/css/codecats.css
+++ b/public/css/codecats.css
@@ -1,16 +1,26 @@
-.vcenter {
-    display: inline-block;
-    vertical-align: middle;
-    float: none;
+html, body {
+    height: 100%;
 }
 
 body {
     background-color: #F4F9F2;
 }
 
+.landing-container-fluid {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    min-height: 100%;
+}
+
 .navbar-inverse {
     background-color: #1C1C1C;
     border-color: rgb(153, 60, 54);
+}
+
+#login-section {
+    text-align: center;
 }
 
 #logo-img {
